--- a/Otchet.tex
+++ b/Otchet.tex
@@ -1,10 +1,51 @@
 \documentclass{article}
 \usepackage[utf8x]{inputenc}
 \usepackage[russian]{babel}
+\usepackage{amsmath}
 \author{Носков Роман, Пасютин Александр, Панчишин Даниил}
 \title{Инструменты для оформления научных статей и презентаций (верстка текстового документа в Latex, оформление элементов текстового документа в \LaTeX, презентации в \LaTeX, работа с видео в \LaTeX-презентациях).}
 \begin{document}
-	\maketitle
+	\begin{center}
+		\scriptsize{МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ
+		
+		Федеральное государственное бюджетное образовательное учреждение высшего образования
+		
+		«Кемеровский государственный университет»
+		
+		Институт фундаментальных наук
+		
+		Кафедра ЮНЕСКО по информационным вычислительным технологиям
+	}
+	\vspace{\baselineskip}
+		
+			\LARGE{\textbf{ОТЧЁТ}}
+		
+		\normalsize по учебной практике, технологической (проектно-технологической) практике
+		
+		проект «Инструменты для оформления научных статей и презентаций (верстка текстового документа в LaTeX, оформление элементов текстового документа в LaTeX, презентации в LaTeX, работа с видео в LaTeX-презентациях»
+	\end{center}
+\textbf{Выполнили:}
+
+\noindent студенты направления подготовки 02.03.02 Фундаментальная информатика и информационные технологии, направленности (профиля) подготовки «Информатика и компьютерные науки»
+
+\begin{flushright}
+	
+$\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\text{(Оценка)}}{\underline{\hspace{0.1\textwidth}}}$ 
+\vspace{\baselineskip}
+		
+$\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\text{(Оценка)}}{\underline{\hspace{0.1\textwidth}}}$ 
+\vspace{\baselineskip}
+
+$\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\text{(Оценка)}}{\underline{\hspace{0.1\textwidth}}}$ 
+\end{flushright}
+\newpage
+\section{Оглавление}
+1. Описание проекта
+
+
+
+
+
 	\section*{Актуальность, теоретическая и практическая значимость:}
 	
 	
@@ -38,6 +79,17 @@
 	\section*{Конечный результат:}
 	Презентация и отчет о \LaTeX, созданные в \LaTeX.
 	
-	\section{Распределение по ролям:}
+	\section{Ход работы}
+	3.03 – 18.03:
+	
+	Изучили особенности форматирования текста в системе LaTeX (русификация, шрифты, стили, разделы, интервалы, переносы)
+	
+	Изучили набор математических формул (строчные и выключные формулы, дроби, скобки, стандартные функции, символы, диакратические знаки и буквы других алфавитов)
+	
+	Создание презентаций (знакомство с пакетом Beamer, темы оформления, создание титульного слайда, оглавление презентации, поочередное появление объектов, выделение информации при помощи блоков и т.д.)
+	
+	\noindent 18.03-15.04:
+	
+	Создали в PowerPoint шаблон презентации, словарь команд \LaTeX для изменения шрифтов, заготовки отчета и презентации в \LaTeX
 	
 \end{document}
