--- a/Otchet.tex
+++ b/Otchet.tex
@@ -39,7 +39,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\text{(Оценка)}}{\underline{\hspace{0.1\textwidth}}}$ 
 \end{flushright}
 \newpage
-\section{Оглавление}
+\section*{Оглавление}
 1. Описание проекта
 
 
@@ -79,7 +79,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	\section*{Конечный результат:}
 	Презентация и отчет о \LaTeX, созданные в \LaTeX.
 	
-	\section{Ход работы}
+	\section*{Ход работы}
 	3.03 – 18.03:
 	
 	Изучили особенности форматирования текста в системе LaTeX (русификация, шрифты, стили, разделы, интервалы, переносы)
@@ -87,6 +87,10 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	Изучили набор математических формул (строчные и выключные формулы, дроби, скобки, стандартные функции, символы, диакратические знаки и буквы других алфавитов)
 	
 	Создание презентаций (знакомство с пакетом Beamer, темы оформления, создание титульного слайда, оглавление презентации, поочередное появление объектов, выделение информации при помощи блоков и т.д.)
+	\vspace{\baselineskip}
+	\vspace{\baselineskip}
+	
+	
 	
 	\noindent 18.03-15.04:
 	
