--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -47,6 +47,34 @@
 \usepackage{media9}
 \usepackage{hyperref}
 
+%%%Листинг кода
+\usepackage{color} %% это для отображения цвета в коде
+\usepackage{listings} %% собственно, это и есть пакет listings
+
+\usepackage{caption}
+\DeclareCaptionFont{white}{\color{white}} %% это сделает текст заголовка белым
+%% код ниже нарисует серую рамочку вокруг заголовка кода.
+\DeclareCaptionFormat{listing}{\colorbox{gray}{\parbox{\textwidth}{#1#2#3}}}
+\captionsetup[lstlisting]{format=listing,labelfont=white,textfont=white}
+
+\lstset{ %
+	%language=C++,                 % выбор языка для подсветки (здесь это С)
+	basicstyle=\Large, % размер шрифта для подсветки кода
+	numbers=left,               % где поставить нумерацию строк (слева\справа)
+	%numberstyle=\tiny,           % размер шрифта для номеров строк
+	stepnumber=1,                   % размер шага между двумя номерами строк
+	numbersep=5pt,                % как далеко отстоят номера строк от подсвечиваемого кода
+	backgroundcolor=\color{cyan}, % цвет фона подсветки - используем \usepackage{color}
+	showspaces=false,            % показывать или нет пробелы специальными отступами
+	showstringspaces=false,      % показывать или нет пробелы в строках
+	showtabs=false,             % показывать или нет табуляцию в строках
+	frame=single,              % рисовать рамку вокруг кода
+	tabsize=2,                 % размер табуляции по умолчанию равен 2 пробелам
+	captionpos=t,              % позиция заголовка вверху [t] или внизу [b] 
+	breaklines=true,           % автоматически переносить строки (да\нет)
+	breakatwhitespace=false, % переносить строки только если есть пробел
+	escapeinside={\%*}{*)}   % если нужно добавить комментарии в коде
+}
 \usetheme{Montpellier} %тема оформления
 %beamer theme matrix
 \usecolortheme{crane}
@@ -225,5 +253,9 @@
 		\frametitle{\insertsubsection}
 		\href{run:AMOGUS.avi}{\includegraphics[scale=0.25]{AMOGUS.jpg}}
 	\end{center}
+\end{frame}
+
+\begin{frame}
+		\lstinputlisting[language=C++]{programm.cpp}
 \end{frame}
 \end{document}
