--- a/proekt/proekt.tex
+++ b/proekt/proekt.tex
@@ -86,8 +86,13 @@
 \usepackage{caption}
 
 \usetheme{Rochester} %тема оформления
+
 %beamer theme matrix
 \usecolortheme{whale}
+
+\usebackgroundtemplate{\includegraphics[width=\paperwidth,height=\paperheight]{back.jpg}}
+
+\setbeamertemplate{blocks}[rounded][shadow=true]
 
 \setbeamertemplate{navigation symbols}{} %отключение значков навигации
 
@@ -98,7 +103,7 @@
 \and Носков Р.И.
 \and Пасютин А.С.
 }
-\title[Презентация]{Проект \textbf{«\LaTeX»}}
+\title[Презентация]{Проект \textbf{\LaTeX}}
 \subtitle{Выполнили студенты 1 курса, ФИТ-204:}
 \date[]{}
 \institute[]{\normalsize\textbf{КемГУ}}
@@ -114,8 +119,8 @@
 \begin{frame}
 	\frametitle{\insertsection}
 	\begin{itemize}
-		\item Научиться делать документы с высококачественной версткой текста и формул
-		\item Продемонстрировать группе возможности \LaTeX'а
+		\item[\textbullet] Научиться делать документы с высококачественной версткой текста и формул
+		\item[\textbullet] Продемонстрировать группе возможности \LaTeX'а
 	\end{itemize}
 \end{frame}
 
@@ -124,9 +129,9 @@
 \begin{frame}
 	\frametitle{\insertsection}
 	\begin{itemize}
-		\item Изучение инструментов и макропакетов \TeX’а
-		\item Получение навыков верстки текста в \LaTeX'е
-		\item Создание отчета по проекту в системе \LaTeX
+		\item[\textbullet] Изучение инструментов и макропакетов \TeX’а
+		\item[\textbullet] Получение навыков верстки текста в \LaTeX'е
+		\item[\textbullet] Создание отчета по проекту в системе \LaTeX
 	\end{itemize}
 \end{frame}
 
@@ -135,9 +140,9 @@
 \begin{frame}
 	\frametitle{\insertsection}
 	\begin{enumerate}
-		\item<1-> \textbf{Панчишин Даниил} - Тим-лид, создание тех задания, работа в \LaTeX’е с мат. формулами, рисунками и графиками;
-		\item<2-> \textbf{Носков Роман} - Работа в \LaTeX’е с инструментами для верстки текста;
-		\item<3-> \textbf{Пасютин Александр} - Работа в \LaTeX’е с инструментами для работы с презентациями.
+		\item[\textbullet]<1-> \textbf{Панчишин Даниил} - Тим-лид, создание тех задания, работа в \LaTeX’е с мат. формулами, рисунками и графиками;
+		\item[\textbullet]<2-> \textbf{Носков Роман} - Работа в \LaTeX’е с инструментами для верстки текста;
+		\item[\textbullet]<3-> \textbf{Пасютин Александр} - Работа в \LaTeX’е с инструментами для работы с презентациями.
 	\end{enumerate}
 \end{frame}
 
@@ -185,26 +190,26 @@
 \begin{figure}[h]
 	\begin{center}
 		\begin{minipage}[h]{0.4\linewidth}
-			\includegraphics[width=5cm,height=5cm]{tex}
+			\includegraphics[width=5cm,height=5cm]{tex.pdf}
 			\caption*{\huge{TeXStudio}}
 		\end{minipage}
 		\hfill											
 		\begin{minipage}[h]{0.4\linewidth}
-			\includegraphics[width=5cm,height=5cm]{miktex}
+			\includegraphics[width=5cm,height=5cm]{miktex.pdf}
 			\caption*{\huge{MiKTeX}}
 		\end{minipage}
 	\end{center}
 \end{figure}
 \end{frame}
 
-\section{Зачем использовать \TeX  для создания презентаций?}
+\section{Зачем использовать \TeX \: для создания презентаций?}
 
 \begin{frame}
 	\frametitle{\insertsection}
 	\begin{itemize}
-		\item На слайдах отображаетя материал, набранный изначально в \LaTeX'е. 
-		\item На слайдах много формул.
-		\item Вам не хочется думать о переносимости файлов PowerPoint между различными версиями / компьютерами. Готовый файл pdf отображается везде. 
+		\item[\textbullet] На слайдах отображаетя материал, набранный изначально в \LaTeX'е. 
+		\item[\textbullet] На слайдах много формул.
+		\item[\textbullet] Вам не хочется думать о переносимости файлов PowerPoint между различными версиями / компьютерами. Готовый файл pdf отображается везде. 
 	\end{itemize}
 \end{frame}
 
@@ -213,8 +218,8 @@
 \begin{frame}
 	\frametitle{\insertsubsection}
 	\begin{itemize}
-		\item Beamer - класс для \LaTeX'а,специально предназначенный для создания презентаций.
-		\item Позволяет настраивать внешний вид, переходы и т.п.
+		\item[\textbullet] Beamer - класс для \LaTeX'а,специально предназначенный для создания презентаций.
+		\item[\textbullet] Позволяет настраивать внешний вид, переходы и т.п.
 	\end{itemize}
 	\begin{block}{}
 		 \cm{documentclass}[russian, 14pt]\{beamer\}
@@ -380,7 +385,7 @@
 	\end{block}
 \end{frame}
 
-\usebackgroundtemplate{}
+\usebackgroundtemplate{\includegraphics[width=\paperwidth,height=\paperheight]{back.jpg}}
 
 \section{Свои команды}
 
@@ -393,13 +398,6 @@
 		\cm{newcommand}\{\textbackslash cm\}[1]\{\cm{color}\{Mycolor3\}
 		\cm{textbackslash}\#1\}
 	\end{block}
-\end{frame}
-
-\section{Оглавление}
-
-\begin{frame}
-	\frametitle{\insertsection}
-		\tableofcontents
 \end{frame}
 
 \begin{frame}
